# unifiedcopypasteserver

./: .gitignore  .gitmodules  README.md  pyproject.toml  requirements.txt
api/: api.py  authrequest.py  clipboardrequest.py  connectionmanager.py  main.py
api/tests/: test_main.py
client/public/: index.html
client/src/: App.svelte  Clipboard.svelte
scripts/: ucp-server.service
