[tool.poetry]
name = "unifiedcopypasteserver"
version = "0.1.0"
description = ""
authors = ["Rostyslav Hnatyshyn <rostyslav.hnatyshyn@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.78.0"
uvicorn = "^0.17.6"
websockets = "^10.3"
aiocache = "^0.11.1"
asyncio = "^3.4.3"

[tool.poetry.dev-dependencies]
pyright = "^1.1.254"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
